# sts-game

./: .gitignore  CMakeLists.txt  design.md
client/: GameClient.cpp  GameClient.hpp  main.cpp
common/: BoardDimensions.hpp  GameTypes.hpp  PieceColor.hpp  PlayerArea.hpp  PlayerViewTransform.hpp  Position.hpp  Protocol.hpp  Serialization.cpp
demo/: main.cpp
game/: BoardPiece.hpp  Box.cpp  Box.hpp  BoxBoard.cpp  BoxBoard.hpp  CombatContext.cpp  CombatContext.hpp  CombatMath.cpp  CombatMath.hpp  CombatRandom.cpp  CombatRandom.hpp  CombatResolver.cpp  CombatResolver.hpp  DamageResolver.cpp  DamageResolver.hpp  EliminationRule.cpp  EliminationRule.hpp  GameSession.cpp  GameSession.hpp  Hero.cpp  Hero.hpp  HeroFactory.cpp  HeroFactory.hpp  RedHero.hpp  Tower.cpp  Tower.hpp
gui/: AnimationController.hpp  BoardGeometry.cpp  BoardGeometry.hpp  BoardRenderer.cpp  BoardRenderer.hpp  BoxTextureCatalog.cpp  BoxTextureCatalog.hpp  ClientGameState.cpp  ClientGameState.hpp  GameWindow.cpp  GameWindow.hpp  GuiGameClient.cpp  GuiGameClient.hpp  HeroRenderer.cpp  HeroRenderer.hpp  HeroTextureCatalog.cpp  HeroTextureCatalog.hpp  InputController.cpp  InputController.hpp  NetworkClient.cpp  NetworkClient.hpp  ResourceManager.cpp  ResourceManager.hpp  StatusEffectDisplay.cpp  StatusEffectDisplay.hpp  StatusEffectRenderer.cpp  StatusEffectRenderer.hpp  ThreadSafeMessageQueue.hpp  WindowLayout.cpp  WindowLayout.hpp  main.cpp
server/: GameServer.cpp  GameServer.hpp  main.cpp
tests/: BoardTests.cpp  CombatTests.cpp  EliminationRuleTests.cpp  GuiClientTests.cpp  HeroTests.cpp  NetworkSessionTests.cpp  OpeningTurnTests.cpp  ProtocolTests.cpp  TestHarness.hpp  TestMain.cpp  TestSupport.hpp  ViewTransformTests.cpp
